# claude-hh

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  install.sh  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: PRD_v2.0.md  architecture.md  reward-functions.md  rl-environment.md  single-focus-principle.md  spec-first-workflow.md  testing-integration.md
docs/audit/: audit_report_20260406.md  performance_baseline.md
docs/research/: 功能正确性验证研究.md  开发环境进化研究报告.md
examples/: deliberate_bugs.py  pipeline_demo.md  reward_demo.py
foundation/configs/: .bandit.yaml  .pre-commit-config.yaml  pyproject.toml
foundation/project-template/: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
foundation/project-template/src/api/: app.py  deps.py
foundation/project-template/src/core/: config.py
foundation/project-template/tests/: conftest.py
foundation/shared-lib/: pyproject.toml  setup.py
foundation/shared-lib/starpalace_shared/: __init__.py  auth.py  db.py  errors.py  logging_config.py  models.py  security.py  tasks.py
foundation/shared-lib/tests/: test_shared.py
harness/: __init__.py  autofix.py  cli.py  exec_verifier.py  feedback.py  health.py  hook_runner.py  mutation_test.py  pipeline.py  reporter.py  reward.py  risk_analyzer.py  runner.py  skill_extractor.py  spec_file.py  spec_validator.py  telemetry.py  verdict.py
harness/rules/: architecture_rules.md  functional_rules.md  security_rules.md
harness/tests/: test_exec_verifier.py  test_reporter.py  test_reward.py  test_runner.py  test_spec_validator.py
hooks/: anti_rationalization.md  install_v2.py  post_agent.py  post_edit.py  pre_commit.py  pre_edit.py  stop_check.py
marketing/: wechat-v0.2-article.md  wechat-v0.3-article.md  xiaohongshu-post-v1.md
patches/: CLAUDE-md-additions.md  xiaoce-v2.md
patches/memory-updates/: feedback_testing_philosophy.md  feedback_testing_roles.md
pipeline/: stages.md
pipeline/stage_prompts/: 01_spec.md  (+5 more)
scripts/: update_permissions.py
templates/: adr-template.md  spec-template.md
(+6 files in other folders)
