[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "harness"
version = "2.0.0"
description = "Code quality verification engine for AI-generated code"
requires-python = ">=3.9"
dependencies = [
    "ruff",
    "bandit",
    "mypy",
]

[project.optional-dependencies]
full = [
    "detect-secrets",
    "radon",
]

[tool.setuptools.packages.find]
include = ["harness*"]
