[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "PyJWT>=2.0",
    "starpalace-shared>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.13",
    "bandit>=1.8",
    "detect-secrets>=1.5",
    "pre-commit>=3.0",
    "pytest>=7.0",
]

# === Harness Engineering 统一工具配置 ===

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "A", "C90", "SIM", "T20", "RUF", "PTH"]
ignore = ["S101", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "T20"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short -q"
